WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
236599
Fix crash with deeply nested async overflow scroll
https://bugs.webkit.org/show_bug.cgi?id=236599
Summary
Fix crash with deeply nested async overflow scroll
Simon Fraser (smfr)
Reported
2022-02-14 11:03:21 PST
Fix crash with deeply nested async overflow scroll
Attachments
Patch
(4.41 KB, patch)
2022-02-14 11:20 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2022-02-14 11:20:23 PST
Created
attachment 451927
[details]
Patch
Simon Fraser (smfr)
Comment 2
2022-02-14 11:20:27 PST
<
rdar://problem/88656665
>
EWS
Comment 3
2022-02-14 15:35:16 PST
Committed
r289776
(
247244@main
): <
https://commits.webkit.org/247244@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 451927
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug