Cherry-pick r289776. rdar://problem/88656665

Fix crash with deeply nested async overflow scroll
    https://bugs.webkit.org/show_bug.cgi?id=236599
    Source/WebCore:

    rdar://88656665

    Reviewed by Alan Bujtas.

    mergeClippingScopesRecursive() already does the append of the rects; doing so
    before calling recursing triggers double appends, hence exponentially growing
    rect lists.

    Test: compositing/layer-creation/clipping-scope/deeply-nested-overflow.html

    * rendering/LayerOverlapMap.cpp:
    (WebCore::OverlapMapContainer::mergeClippingScopesRecursive):

    LayoutTests:

    Reviewed by Alan Bujtas.

    * compositing/layer-creation/clipping-scope/deeply-nested-overflow-expected.txt: Added.
    * compositing/layer-creation/clipping-scope/deeply-nested-overflow.html: Added.

    Canonical link: https://commits.webkit.org/247244@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289776 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.198@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@289845 268f45cc-cd09-0410-ab3c-d52691b4dbfc