Source/WebCore/rendering/LayerOverlapMap.cpp
@@ -195,10 +195,9 @@ void OverlapMapContainer::mergeClippingScopesRecursive(const ClippingScope& sour
 
     for (auto& sourceChildScope : sourceScope.children) {
         ClippingScope* destChild = destScope.childWithLayer(sourceChildScope.layer);
-        if (destChild) {
-            destChild->rectList.append(sourceChildScope.rectList);
+        if (destChild)
             mergeClippingScopesRecursive(sourceChildScope, *destChild);
-        } else {
+        else {
             // New child, just copy the whole subtree.
             destScope.addChild(sourceChildScope);
         }
